# lemon-chess

./: .gitignore  Cargo.toml  README.md
src/: database.rs  docs.rs  error.rs  main.rs
src/entities/: room.rs  session.rs  user.rs
src/extractors/: authentication.rs  session_extractor.rs
src/game/: ai.rs  bit_board.rs  chess_board.rs  color.rs  enums.rs  error.rs  piece.rs  position.rs  render.rs  state.rs
src/models/: enums.rs  move_models.rs  query_models.rs  response_models.rs  room_models.rs  session_models.rs
src/resources/: ping.rs  room.rs  session.rs  user.rs
src/utils/: random.rs  sanitize.rs  time_operations.rs
