[package]
name = "lemon-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["original-uri"] }
axum-valid = { version = "0.18.0", features = ["garde", "basic"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
futures = "0.3.30"
image = "0.25.1"
lazy_static = "1.4.0"
mongodb = "2.8.2"
rand = "0.8.5"
rustrict = "0.7.24"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
utoipa = "4.2.0"
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.8.0", features = ["v4"] }
validator = { version = "0.18.1", features = ["derive"] }
